Corrected Icon colour
Twitch link icon colour was not visible due to a white colour being applied.

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -150,7 +150,16 @@ h5 {
     }
 
     &.no-overlay {
-        color: rgb(0,0,0) !important;
+        color: rgb(0,0,0);
+
+        .ServiceIcon {
+            color: rgba(0,0,0,.65);
+
+            &:hover,
+            &:focus {
+                color:rgb(0,0,0);
+            }
+        }
     }
 }
 
